# falken

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
dashboard/: .firebaserc  README.md  firebase.json  package-lock.json  (+2 more)
environments/cpp/hello_falken/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  gradle.properties  readme.txt  settings.gradle
environments/cpp/hello_falken/gradle/wrapper/: gradle-wrapper.properties
environments/cpp/hello_falken/res/layout/: gamepad.xml
environments/cpp/hello_falken/res/mipmap-anydpi-v26/: ic_launcher.xml
environments/cpp/hello_falken/res/values/: ic_launcher_background.xml  strings.xml
environments/cpp/hello_falken/src/: falken_player.cc  falken_player.h  falken_player_dynamic.cc  falken_player_dynamic.h  game.cc  game.h  gamepad.cc  gamepad.h  glplatform.h  input_device.h  keyboard.cc  keyboard.h  main.cc  math_utils.h  render.cc  render.h  ship.cc  ship.h
environments/cpp/hello_falken/src/android/java/com/google/falken/hellofalken/: HFActivity.java
sdk/cpp/: AndroidManifest.xml  CMakeLists.txt  Findfalken.cmake  README.md  build.gradle  gradle.properties  merge_zipfiles.py  readme.md  settings.gradle  transform_install.cmake
sdk/cpp/gradle/wrapper/: gradle-wrapper.properties
sdk/cpp/src/core/: CMakeLists.txt  Info.plist  absl_log_sink.cc  absl_log_sink.h  absl_log_sink_test.cc  action_proto_converter.cc  action_proto_converter.h  action_proto_converter_test.cc  actions.cc  actions_test.cc  active_session.cc  active_session.h  allocator.cc  allocator_test.cc  assert.h  attribute.cc  attribute_internal.h  attribute_proto_converter.cc  attribute_proto_converter.h  attribute_proto_converter_test.cc  attribute_test.cc  brain.cc  brain_spec.cc  brain_spec_proto_converter.cc  brain_spec_proto_converter.h  brain_spec_proto_converter_test.cc  callback.cc  callback.h  callback_test.cc  child_resource_map.h  child_resource_map_test.cc  client_info.cc  client_info.h  client_info_test.cc  entity.cc  entity_internal.h  entity_proto_converter.cc  entity_proto_converter.h  entity_proto_converter_test.cc  entity_test.cc  (+84 more)
sdk/cpp/src/core/public/include/falken/: actions.h  allocator.h  attribute.h  attribute_base.h  attribute_container.h  bool_attribute.h  brain.h  brain_spec.h  categorical_attribute.h  config.h  entity.h  episode.h  falken.h  feelers_attribute.h  fixed_size_vector.h  joystick_attribute.h  log.h  number_attribute.h  observations.h  position_attribute.h  primitives.h  rotation_attribute.h  service.h  session.h  types.h  unconstrained_attribute.h
sdk/cpp/src/core/swig/: actions.i  allocator.i  attribute.i  attribute_base.i  attribute_container.i  bool_attribute.i  brain.i  brain_spec.i  categorical_attribute.i  config.i  entity.i  episode.i  falken_module.i  feelers_attribute.i  fixed_size_vector.i  joystick_attribute.i  log.i  null_check_this.i  number_attribute.i  observations.i  position_attribute.i  primitives.i  rotation_attribute.i  service.i  session.i  types.i  unconstrained_attribute.i
sdk/cpp/src/tf_wrapper/: CMakeLists.txt  custom_ops.cc  custom_ops.h  custom_ops_test.cc  example_model.cc  example_model.h  lite_model.cc  lite_model.h  lite_model_test.cc  model.cc  model.h  model_comparison_test.cc  tf_wrapper.cc  tf_wrapper.h
sdk/cpp/src/tf_wrapper/example_model/: action_data.pbtxt_template  action_spec.pbtxt  observation_data.pbtxt_template  observation_spec.pbtxt  policy_specs.pbtxt
sdk/cpp/src/tf_wrapper/example_model/tflite/: model.tflite
sdk/cpp/src/tf_wrapper/example_model/variables/: variables.data-00000-of-00001  variables.index
sdk/cpp/testapp/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  gradle.properties  proguard.pro  settings.gradle
sdk/cpp/testapp/res/layout/: main.xml
sdk/cpp/testapp/res/mipmap-anydpi-v26/: ic_launcher.xml
sdk/cpp/testapp/res/values/: ic_launcher_background.xml  strings.xml
sdk/cpp/testapp/src/: common_main.cc  main.h
sdk/cpp/testapp/src/android/: android_main.cc
sdk/cpp/testapp/src/android/java/com/google/example/: LoggingUtils.java
sdk/cpp/testapp/src/desktop/: desktop_main.cc
sdk/cpp/testapp/src/ios/: ios_main.mm
sdk/cpp/testapp/testapp/: Info.plist
sdk/cpp/testapp/testapp.xcodeproj/: project.pbxproj
sdk/unity/: .editorconfig  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CMakeLists.txt  README.md  SDKAssembly.csproj  SDKTests.csproj  export_unity_package_config.json  export_unity_package_guids.json  readme.md  sdk_unity.sln
sdk/unity/Assets/Falken/Samples/HelloFalken/Materials/: Obstacle.mat
sdk/unity/Assets/Falken/Samples/HelloFalken/Scripts/: CommandLineParser.cs  HF_Player.cs
sdk/unity/Assets/Falken/Scripts/: Actions.cs  AssemblyInfo.cs  AttributeBase.cs  AttributeContainer.cs  Boolean.cs  Brain.cs  BrainSpec.cs  Category.cs  Common.cs  Entity.cs  EntityContainer.cs  Episode.cs  EulerAngles.cs  Feelers.cs  Joystick.cs  Log.cs  Number.cs  Observations.cs  Position.cs  Rotation.cs  SDKAssembly.asmdef  Service.cs  Session.cs  Utils.cs  Vector3.cs
sdk/unity/Assets/Falken/Tests/: ActionsTest.cs  AttributeContainerTest.cs  BooleanTest.cs  BrainSpecTest.cs  CategoryTest.cs  EntityTest.cs  EpisodeTest.cs  EulerAnglesTest.cs  FeelersTest.cs  IgnoreErrorMessages.cs  JoystickTest.cs  LogTest.cs  NumberTest.cs  ObservationsTest.cs  PositionTest.cs  RotationTest.cs  SDKTests.asmdef  ServiceTest.cs  SessionTest.cs  Vector3Test.cs
sdk/unity/ProjectSettings/: InputManager.asset  ProjectSettings.asset  QualitySettings.asset
sdk/unity/cmake/: FindMono.cmake  FindNUnit.cmake  FindUnity.cmake  csharp.cmake  csharp_project_csproj.template  nunit.cmake
sdk/unity/cmake/csharp_test/: CMakeLists.txt  Greeter.cs  GreeterFromResource.cs  GreeterFromTheVoid.cs  GreeterTest.cs  GreeterWithDependenciesTest.cs  HelloMain.cs  HelloMainTest.cs  goodbye.txt  native.c
sdk/unity/csharp/: falken_config_json.template  readme.md
sdk/unity/csharp/Falken/: AssemblyInfo.cs
sdk/unity/csharp/Falken.Tests/: AssemblyInfo.cs
sdk/unity/csharp/Falken.Unity/: AssemblyInfo.cs
sdk/unity/csharp/Falken.Unity.Tests/: AssemblyInfo.cs
(+535 files in other folders)
